# kalibr_detector_ros

./: CMakeLists.txt  README.md  package.xml
config/: calibra_config.yaml
include/: calcCamPose.h
launch/: kalibra_apriltag.launch
main/: kalibratag_detector_node.cpp
src/: calcCamPose.cpp
